fix: collapse footer for min

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -59,5 +59,9 @@
     }
 
   }
-
+}
+@media screen and (max-height: 450px) {
+  .footer {
+    visibility: collapse;
+  }
 }
